--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                  </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technocal Skills</h4>
+                <h4 class="h4 service-item-title">Soft Skills</h4>
                 <p class="timeline-text">
                   <ul>  
 
