--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             </div>
 
             <h3 class="h3">Education </h3>
-            <button class="form-btn" type="button" data-form-btn onclick="window.location.href='./assets/images/Resume.pdf'">
+            <button class="form-btn" type="button" data-form-btn onclick="window.location.href=https://drive.google.com/file/d/1Mc7qBQY_9AOthAiHCQgM3SQuUdE8GINz/view?usp=sharing'">
               <ion-icon name="download-outline"></ion-icon>
               <span>Resume</span>
           </button>
