--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
             </div>
 
             <h3 class="h3">Education </h3>
-            <button class="form-btn" type="button" data-form-btn onclick="window.location.href=https://drive.google.com/file/d/1Mc7qBQY_9AOthAiHCQgM3SQuUdE8GINz/view?usp=sharing'">
+            <button class="form-btn" type="button" data-form-btn onclick="window.location.href='https://drive.google.com/uc?export=download&id=1Mc7qBQY_9AOthAiHCQgM3SQuUdE8GINz'">
               <ion-icon name="download-outline"></ion-icon>
               <span>Resume</span>
-          </button>
+            </button>
             
           </div>
 
