--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
             </div>
 
             <h3 class="h3">Education </h3>
-           <button class="form-btn" type="button" data-form-btn onclick="window.open('https://drive.google.com/file/d/1Mc7qBQY_9AOthAiHCQgM3SQuUdE8GINz/view?usp=sharing', '_blank')">
-              <ion-icon name="download-outline"></ion-icon>
-              <span>Resume</span>
-            </button>
+           <a href="https://drive.google.com/file/d/1Mc7qBQY_9AOthAiHCQgM3SQuUdE8GINz/view?usp=sharing" target="_blank" class="form-btn" data-form-btn>
+  <ion-icon name="download-outline"></ion-icon>
+  <span>Resume</span>
+</a>
             
           </div>
 
