--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </div>
 
             <h3 class="h3">Education </h3>
-            <a href="assets/images/resume.pdf" target="_blank" class="form-btn" data-form-btn>
+            <a href="assets/images/Sivabalan Resume.pdf" target="_blank" class="form-btn" data-form-btn>
               <ion-icon name="download-outline"></ion-icon>
               <span>Resume</span>
             </a>
